--- a/src/app/main/project/project.component.html
+++ b/src/app/main/project/project.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-12 text-info project-name"><a *ngIf="project && project.active" [routerLink]="['/projects', project.Id]">{{ project.CustomerName }}</a></div>
 
 <div class="col-md-12" *ngIf="tasks && tasks.length">
-  <task-row-component *ngFor="let task of tasks" [interval]="interval" [task]="task"></task-row-component>
+  <task-row-component *ngFor="let task of tasks" [emplId]="emplId" [interval]="interval" [task]="task"></task-row-component>
 </div>
