fix skill select

--- a/src/app/user-page/user-skills/skill/skill.component.html
+++ b/src/app/user-page/user-skills/skill/skill.component.html
@@ -2,7 +2,7 @@
 <span *ngIf="!addingSkill && isLegal" class="col-md-4 skill-name"><b>{{ skill.Name }}</b></span>
 <span *ngIf="!isLegal && !addingSkill" class="col-md-6 skill-name">{{ skill.Name }}</span>
 <span *ngIf="addingSkill && isLegal" class="col-md-4 skill-name">
-  <task-picker-component [arr]="staticData.skillName" [initial]="skillNameId" [chooseId]="updateSkillNameId.bind(this)"></task-picker-component>
+  <task-picker-component [arr]="staticData.skillName" [filter]="skills" [initial]="skillNameId" [chooseId]="updateSkillNameId.bind(this)"></task-picker-component>
 </span>
 <span class="col-md-4 skill-level" *ngIf="!edit && isLegal">{{ staticData.Level[skillLevelId] }}</span>
 <span *ngIf="!isLegal" class="col-md-6 skill-level">{{ staticData.Level[skillLevelId] }}</span>
