--- a/src/app/user-page/user-skills/user-skills.component.html
+++ b/src/app/user-page/user-skills/user-skills.component.html
@@ -16,7 +16,8 @@
         [addingSkill]="true"
         [isLegal]="isCurrent || isAdmin || isPm"
         [toggleAddingSkill]="toggleAddingSkill.bind(this)"
-        [addSkill]="addSkill.bind(this)"></skill-component>
+        [addSkill]="addSkill.bind(this)"
+        [skills]="skills"></skill-component>
         <div class="col-md-offset-4 col-md-2 skill-button">
           <button *ngIf="isCurrent || isAdmin || isPm" class="btn btn-primary" type="button" (click)="toggleAddingSkill()">{{ addingSkill ? 'Cancel' : 'Add Skill'}}</button>
         </div>
