--- a/src/app/project-page/team/team.component.css
+++ b/src/app/project-page/team/team.component.css
@@ -30,3 +30,27 @@ h2 {
 .add-user {
   width: 500px;
 }
+
+table {
+  width: 100%;
+}
+
+.thead1 {
+  width: 30%;
+}
+
+.thead2 {
+  width: 15%;
+}
+
+.thead3 {
+  width: 30%;
+}
+
+.thead4 {
+  width: 15%;
+}
+
+.thead5 {
+  width: 15%;
+}
