--- a/src/app/project-page/team/team.component.html
+++ b/src/app/project-page/team/team.component.html
@@ -7,15 +7,15 @@
       <div class="col-md-3"><button (click)="toggleAddUser()" [disabled]="disableButton" type="button" class="btn btn-primary">Add to team</button></div>
     </div>
   </div>
-  <div class="member-head col-md-12 text-primary">
-    <div class="row">
-      <span class="member-name col-md-3">Name</span>
-      <span class="member-position col-md-2">Position</span>
-      <span class="member-email col-md-3">Email</span>
-      <span class="member-skype col-md-3">Skype</span>
-    </div>
-  </div>
-  <div class="member col-md-12">
-    <team-member-component *ngFor="let member of members" [isAdminOrPm]="isPm || isAdmin" [removeMember]="removeMember.bind(this)" [member]="member"></team-member-component>
-  </div>
+  <table class="member-head table table-striped">
+    <tr class="text-primary">
+      <th class="thead1">Name</th>
+      <th class="thead2">Position</th>
+      <th class="thead3">Email</th>
+      <th class="thead4">Skype</th>
+      <th class="thead5"></th>
+    </tr>
+    <tr team-member-component *ngFor="let member of members" [isAdminOrPm]="isPm || isAdmin" [removeMember]="removeMember.bind(this)" [member]="member">
+    </tr>
+  </table>
 </div>
