--- a/src/app/user-page/user-skills/skill/skill.component.html
+++ b/src/app/user-page/user-skills/skill/skill.component.html
@@ -1,14 +1,17 @@
 
-<span *ngIf="!addingSkill && isLegal" class="col-md-4 skill-name"><strong>{{ skill.Name }}</strong></span>
-<span *ngIf="!isLegal && !addingSkill" class="col-md-6 skill-name">{{ skill.Name }}</span>
-<span *ngIf="addingSkill && isLegal" class="col-md-4 skill-name">
+<div *ngIf="!addingSkill && isLegal" class="col-md-4 skill-name border">
+  <strong>{{ skill.Name }}</strong>
+</div>
+
+<div *ngIf="!isLegal && !addingSkill" class="col-md-6 skill-name border">{{ skill.Name }}</div>
+<div *ngIf="addingSkill && isLegal" class="col-md-4 skill-name border">
   <task-picker-component [arr]="staticData.skillName" [filter]="skills" [initial]="skillNameId" [chooseId]="updateSkillNameId.bind(this)"></task-picker-component>
-</span>
-<span class="col-md-4 skill-level" *ngIf="!edit && isLegal">{{ staticData.Level[skillLevelId] }}</span>
-<span *ngIf="!isLegal" class="col-md-6 skill-level">{{ staticData.Level[skillLevelId] }}</span>
-<span *ngIf="edit" class="col-md-4 skill-level">
+</div>
+<div class="col-md-4 skill-level border" *ngIf="!edit && isLegal">{{ staticData.Level[skillLevelId] }}</div>
+<div *ngIf="!isLegal" class="col-md-6 skill-level border">{{ staticData.Level[skillLevelId] }}</div>
+<div *ngIf="edit" class="col-md-4 skill-level border">
   <task-picker-component [arr]="staticData.Level" [initial]="skillLevelId" [chooseId]="updateLevel.bind(this)"></task-picker-component>
-</span>
+</div>
 <div class="col-md-4" *ngIf="!edit && isLegal"><button class="btn btn-default" *ngIf="isLegal" (click)="toggleEdit()">Edit</button></div>
 <div class="col-md-2" *ngIf="edit"><button class="btn btn-success" (click)="submitChanges()">Submit</button></div>
 <div class="col-md-2" *ngIf="edit && !addingSkill"><button class="col-md-2" class="btn btn-danger" (click)="deleteSkill()">X</button></div>
