--- a/src/app/add-project-page/add-project-page.component.html
+++ b/src/app/add-project-page/add-project-page.component.html
@@ -8,6 +8,7 @@
     <input type="text" class="form-control" formControlName="CustomerName">
   </form>
 </div>
+
 <div class="row">
   <div class="col-md-12 text-center form">
     <div>Start Date</div>
@@ -15,8 +16,12 @@
     <div>End Date</div>
     <dp-date-picker [(ngModel)]="EndDate"></dp-date-picker>
   </div>
+
   <div class="col-md-12 text-center button">
     <button class="btn btn-primary button" [disabled]="!projectForm.valid" type="button" (click)="submitProject()">Add Project</button>
   </div>
-  <div class="text-right col-md-9"><span>*All fields are required</span></div>
+  
+  <div class="text-right col-md-9">
+    <span>*All fields are required</span>
+  </div>
 </div>
