--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,8 +1,13 @@
 <div class="row">
   <div class="col-md-offset-3 col-md-2">
-    <a routerLink="/admin/users"><img src="assets/images/employees.png" alt=""></a>
+    <a routerLink="/admin/users">
+      <img src="assets/images/employees.png" alt="">
+    </a>
   </div>
+
   <div class="col-md-offset-2 col-md-2">
-    <a routerLink="/admin/projects"><img src="assets/images/projects.png" alt=""></a>
+    <a routerLink="/admin/projects">
+      <img src="assets/images/projects.png" alt="">
+    </a>
   </div>
 </div>
