--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -1,11 +1,23 @@
 <div *ngIf="!isSubmitting" class="row">
   <h1 class="text-center">{{ project.Name }}</h1>
-  <div class="col-md-1 col-md-offset-3"><img src="assets/images/project.png" alt=""><button class="btn btn-primary btn-dashboard" [routerLink]="['/dashboard', project.Id]">Dashboard</button></div>
+  
+  <div class="col-md-1 col-md-offset-3">
+    <img src="assets/images/project.png" alt="">
+    <button class="btn btn-primary btn-dashboard" [routerLink]="['/dashboard', project.Id]">Dashboard</button>
+  </div>
   <div class="col-md-3 info">
-    <div><strong>Customer: </strong>{{ project.CustomerName }}</div>
-    <div><strong>Start Date: </strong>{{ moment(project.StartDate).format('DD-MM-YYYY') }}</div>
-    <div><strong>End Date: </strong>{{ moment(project.EndDate ).format('DD-MM-YYYY') }}</div>
-    <div><strong>Description:</strong></div>
+    <div>
+      <strong>Customer: </strong>{{ project.CustomerName }}
+    </div>
+    <div>
+      <strong>Start Date: </strong>{{ moment(project.StartDate).format('DD-MM-YYYY') }}
+    </div>
+    <div>
+      <strong>End Date: </strong>{{ moment(project.EndDate ).format('DD-MM-YYYY') }}
+    </div>
+    <div>
+      <strong>Description:</strong>
+    </div>
     <p>{{ project.Description }}</p>
   </div>
 
