--- a/src/app/projects-admin-page/projects-admin-page.component.html
+++ b/src/app/projects-admin-page/projects-admin-page.component.html
@@ -1,9 +1,16 @@
 <div class="row">
   <div class="col-md-offset-2 col-md-8">
+
     <div class="row">
-      <div class="col-md-4"><input class="form-control" placeholder="Search..." type="text" [(ngModel)]="filterName" (ngModelChange)="filterNameChange($event)"></div>
-      <div class="col-md-offset-7 col-md-1"><button type="button" class="btn btn-primary" routerLink='/admin/newproject/'>Add project</button></div>
+      <div class="col-md-4">
+        <input class="form-control" placeholder="Search..." type="text" [(ngModel)]="filterName" (ngModelChange)="filterNameChange($event)">
+      </div>
+
+      <div class="col-md-offset-7 col-md-1">
+        <button type="button" class="btn btn-primary" routerLink='/admin/newproject/'>Add project</button>
+      </div>
     </div>
+
     <table class="table table-striped">
       <tr class="project-head text-info">
         <th class="thead1">Name</th>
